turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:2: error: not found: value x
  x=getX();
  ^HouseMany:3: error: not found: value y
  y=getY();
  ^HouseMany:7: error: not found: value x
  setPos(x,y);
         ^HouseMany:7: error: not found: value y
  setPos(x,y);
           ^HouseMany:10: error: not found: value x
  setPos(x,y);
         ^HouseMany:10: error: not found: value y
  setPos(x,y);
           ^